--- a/src/AspCourse/project.lock.json
+++ b/src/AspCourse/project.lock.json
@@ -10414,7 +10414,8 @@
       "Microsoft.NETCore.App >= 1.0.0-rc2-3002702",
       "Microsoft.VisualStudio.Web.BrowserLink.Loader >= 14.0.0-rc2-final",
       "Microsoft.VisualStudio.Web.CodeGeneration.Tools >= 1.0.0-preview1-final",
-      "Microsoft.VisualStudio.Web.CodeGenerators.Mvc >= 1.0.0-preview1-final"
+      "Microsoft.VisualStudio.Web.CodeGenerators.Mvc >= 1.0.0-preview1-final",
+      "System.Globalization.Extensions >= 4.0.1-rc2-24027"
     ],
     ".NETCoreApp,Version=v1.0": []
   },
