--- a/src/AspCourse/appsettings.json
+++ b/src/AspCourse/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "LocalDBConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-AspCourse-7d1b5181-7a65-4818-aa76-ef8c4b881341;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "LocalDBConnection": "Server=(localdb)\\mssqllocaldb;Database=AspCourse;Trusted_Connection=True;MultipleActiveResultSets=true",
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=AspCourseDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
