--- a/src/AspCourse/appsettings.json
+++ b/src/AspCourse/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "LocalDBConnection": "Server=(localdb)\\mssqllocaldb;Database=AspCourseLocalDb;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=AspCourseDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=AspCourseNewDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
